--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <title>Portafolio</title>
   </head>
   <body>
     <div class="container">
       <h1>Martín 又吉 //
-      <span class="txt-type" data-wait="3000" data-words='["LinkeIn" , "GitHub"]'</span>
+      <span class="txt-type" data-wait="3000" data-words='["LinkeIn." , "GitHub."]'</span>
       </h1>
       <h2>Bienvenido a mi página</h2>
     </div>
     <script src="index.js"></script>
   </body>
+  <footer>M87</footer>
 </html>
