--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <h1>Martín 又吉 //
-      <span class="txt-type" data-wait="3000" data-words='["LinkeIn." , "GitHub."]'</span>
+      <span class="txt-type" data-wait="3000" data-words='["LinkedIn.", "GitHub.", "Mail."]'</span>
       </h1>
       <h2>Bienvenido a mi página</h2>
     </div>
@@ -16,3 +16,6 @@
   </body>
   <footer>M87</footer>
 </html>
+
+
+<!-- flecha <img src="https://img.icons8.com/ios-filled/50/000000/double-left.png"/> -->
