--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>Martín 又吉 //
       <span class="txt-type" data-wait="3000" data-words='["LinkedIn.", "GitHub.", "Mail."]'</span>
       </h1>
-      <h2>Bienvenido a mi página</h2>
+      <h2>Portafolio</h2>
     </div>
     <script src="index.js"></script>
   </body>
