--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
     <title>Portafolio</title>
   </head>
   <body>
@@ -11,10 +12,13 @@
       <span class="txt-type" data-wait="3000" data-words='["LinkedIn.", "GitHub.", "Mail."]'</span>
       </h1>
       <h2>Portafolio</h2>
+      <h3>
+        <a href="https://www.linkedin.com/in/martinmatayoshiyamada/" target="_blank"><img src="img/linkedIn.png" alt="linkedIn"></a>
+        <a href="https://github.com/kamikaizer"target="_blank"><img src="img/gitHub.png" alt="gitHub"></a>
+        <a href="mailto:mmatayoshiy@gmail.com" target="_blank"><img src="img/mail.png" alt="Mail"></a>
+      </h3>
     </div>
-    <script src="index.js"></script>
   </body>
-  <footer>M87</footer>
 </html>
 
 
