--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/index.js"></script>
     <title>Portafolio</title>
   </head>
   <body>
@@ -13,13 +13,10 @@
       </h1>
       <h2>Portafolio</h2>
       <h3>
-        <a href="https://www.linkedin.com/in/martinmatayoshiyamada/" target="_blank"><img src="img/linkedIn.png" alt="linkedIn"></a>
-        <a href="https://github.com/kamikaizer"target="_blank"><img src="img/gitHub.png" alt="gitHub"></a>
-        <a href="mailto:mmatayoshiy@gmail.com" target="_blank"><img src="img/mail.png" alt="Mail"></a>
+        <a href="https://www.linkedin.com/in/martinmatayoshiyamada/" target="_blank"><img src="https://66.media.tumblr.com/ad996e86238d1532c20ed3558f3749b7/78c48f6c0177e4de-77/s75x75_c1/5c00f49fa53653730de890eb5e28b8889ddadbc0.png" alt="linkedIn"></a>
+        <a href="https://github.com/kamikaizer"target="_blank"><img src="https://66.media.tumblr.com/9ed13dbbf93470fa647271e97919e0d1/78c48f6c0177e4de-dd/s75x75_c1/dd9ed61e5d27a6747e125338c0d3e0b7c11bb1e7.png" alt="gitHub"></a>
+        <a href="mailto:mmatayoshiy@gmail.com" target="_blank"><img src="https://66.media.tumblr.com/81792d014e08728903eea2ce5d12241a/78c48f6c0177e4de-d3/s75x75_c1/5450a722e4dac8b6947ccc8d9284bb1a18d8745d.png" alt="Mail"></a>
       </h3>
     </div>
   </body>
 </html>
-
-
-<!-- flecha <img src="https://img.icons8.com/ios-filled/50/000000/double-left.png"/> -->
